# uuid

./: CMakeLists.txt  README.rst  uuid.pc.in
src/: CMakeLists.txt
